compile_fail_tests/map/more_params_than_arrays.stderr
error: meta-variable `iae` repeats 1 time, but `iip` repeats 2 times
 --> src/map.rs
  |
  |             [$(($iae, $iip, ))*]
  |               ^^^^^^^^^^^^^^^^
